# figma

./: DEPLOYMENT.md  README.md  index.html  manifest.json  sw.js  v1-basic.html
basic/: index.html
css/: style.css
js/: app.js  auto-layout.js  canvas-engine.js  collaboration.js  connector.js  diagram-shapes.js  effects.js  group.js  history.js  image-shape.js  layers.js  layout-engine.js  mermaid-editor.js  pen-tool.js  prototyping.js  smart-guides.js  text-editor.js
mermaid/: index.html
pro/: index.html
wasm/: Cargo.toml  index.html
wasm/pkg/: designflow_wasm.d.ts  designflow_wasm.js  designflow_wasm_bg.wasm  designflow_wasm_bg.wasm.d.ts  package.json
wasm/src/: lib.rs
whiteboard/: index.html
