[package]
name = "designflow-wasm"
version = "1.0.0"
authors = ["DesignFlow"]
edition = "2021"
description = "High-performance canvas operations for DesignFlow"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "ImageData",
] }
console_error_panic_hook = { version = "0.1", optional = true }

[profile.release]
opt-level = 3
lto = true
